--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <!-- 引入 ECharts 文件 -->
-    <script src="js/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.3/jquery.slim.min.js"></script>
     <script type="text/javascript">
         window.HOST_TYPE = 1
     </script>
-    <script src="js/echarts.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.4.1/echarts.min.js"></script>
 
     <body style="height: 100%; margin: 0">
         <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
